Optimize some performance issues